2003-06-13  Martin Hunt  <hunt@redhat.com>

	* library/prefs.tcl (load_gnome_file): Fix parsing
	of gtk theme files so Red Hat 9 (and others) GNOME colors 
	are correct.

2003-06-11  David Carlton  <carlton@bactrian.org>

	* generic/gdbtk-stack.c: Include dictionary.h.
	(gdb_block_vars): Update use of ALL_BLOCK_SYMBOLS.
	(gdb_get_blocks, gdb_get_vars_command): Ditto.
	* generic/gdbtk-cmds.c: Include dictionary.h.
	(gdb_listfuncs): Update use of ALL_BLOCK_SYMBOLS.

2003-06-11  David Carlton  <carlton@bactrian.org>

	* generic/gdbtk-register.c (get_register): REGISTER_CONVERTIBLE
	and REGISTER_CONVERT_TO_VIRTUAL are deprecated.

2003-05-12  Elena Zannoni  <ezannoni@redhat.com>

        * generic/gdbtk-cmds.c (gdb_search): Replace namespace_enum
        with domain_emum, and *_NAMESPACE with *_DOMAIN.

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* generic/gdbtk-register.c (get_register): Replace
	MAX_REGISTER_VIRTUAL_SIZE and MAX_REGISTER_RAW_SIZE with
	MAX_REGISTER_SIZE.
	(register_changed_p, setup_architecture_data): Ditto.

2003-04-30  Andrew Cagney  <cagney@redhat.com>

	* generic/gdbtk-cmds.c (gdb_disassemble_driver): Instead of
	TARGET_PRINT_INSN_INFO, "dis_asm_memory_error",
	"dis_asm_read_memory", and "dis_asm_print_address", use
	"deprecated_tm_print_insn_info"

2003-04-11  Andrew Cagney  <cagney@redhat.com>

	* generic/gdbtk-stack.c (get_frame_name): Use get_frame_pc and
	get_next_frame.

2003-03-18  Keith Seitz  <keiths@redhat.com>

	From Nick Kelsey <nickk@ubicom.com>:
	* process.itb (build_win): Removed ide_sizebox instantiation that is
	no longer required and is causing errors for win hosts.
	* tdump.tcl (build_win): Ditto.
	* locals.tcl (build_win): Removed ide_sizebox instantiation that is
	no longer required and already commented out.
	* regwin.itb (build_win): Ditto.
	* srcwin.itb (constructor): Ditto.
	* stackwin.itb (constructor): Ditto.
	* watch.tcl (constructor): Ditto.

2003-03-24  Martin M. Hunt  <hunt@redhat.com>
